--- a/popup.css
+++ b/popup.css
@@ -1,313 +1,34 @@
-/*** <--- CONTAINER ---> ***/
-.bottom-particles {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-}
-.bottom-particles .bubble {
-  opacity: 0;
-  position: absolute;
-  bottom: -1rem;
-  width: 1rem;
-  height: 1rem;
-  background-color: rgba(255, 255, 255, 0.5);
-  border-radius: 50%;
-}
-.bottom-particles .bubble:nth-child(1) {
-  left: 69%;
-  animation: blow 10113ms infinite;
-  animation-delay: 10827ms;
-}
-.bottom-particles .bubble:nth-child(2) {
-  left: 26%;
-  animation: blow 5000ms infinite;
-  animation-delay: 3820ms;
-}
-.bottom-particles .bubble:nth-child(3) {
-  left: 83%;
-  animation: blow 9763ms infinite;
-  animation-delay: 8131ms;
-}
-.bottom-particles .bubble:nth-child(4) {
-  left: 98%;
-  animation: blow 5000ms infinite;
-  animation-delay: 10233ms;
-}
-.bottom-particles .bubble:nth-child(5) {
-  left: 23%;
-  animation: blow 13257ms infinite;
-  animation-delay: 10682ms;
-}
-.bottom-particles .bubble:nth-child(6) {
-  left: 69%;
-  animation: blow 14953ms infinite;
-  animation-delay: 6305ms;
-}
-.bottom-particles .bubble:nth-child(7) {
-  left: 76%;
-  animation: blow 14583ms infinite;
-  animation-delay: 7868ms;
-}
-.bottom-particles .bubble:nth-child(8) {
-  left: 79%;
-  animation: blow 13545ms infinite;
-  animation-delay: 8006ms;
-}
-.bottom-particles .bubble:nth-child(9) {
-  left: 36%;
-  animation: blow 5000ms infinite;
-  animation-delay: 11881ms;
-}
-.bottom-particles .bubble:nth-child(10) {
-  left: 72%;
-  animation: blow 9535ms infinite;
-  animation-delay: 4548ms;
-}
-.bottom-particles .bubble:nth-child(11) {
-  left: 78%;
-  animation: blow 14960ms infinite;
-  animation-delay: 8644ms;
-}
-.bottom-particles .bubble:nth-child(12) {
-  left: 6%;
-  animation: blow 12415ms infinite;
-  animation-delay: 1066ms;
-}
-.bottom-particles .bubble:nth-child(13) {
-  left: 59%;
-  animation: blow 5000ms infinite;
-  animation-delay: 3018ms;
-}
-.bottom-particles .bubble:nth-child(14) {
-  left: 42%;
-  animation: blow 5000ms infinite;
-  animation-delay: 480ms;
-}
-.bottom-particles .bubble:nth-child(15) {
-  left: 16%;
-  animation: blow 5000ms infinite;
-  animation-delay: 2264ms;
-}
-.bottom-particles .bubble:nth-child(16) {
-  left: 66%;
-  animation: blow 5000ms infinite;
-  animation-delay: 2722ms;
-}
-.bottom-particles .bubble:nth-child(17) {
-  left: 81%;
-  animation: blow 10069ms infinite;
-  animation-delay: 2328ms;
-}
-.bottom-particles .bubble:nth-child(18) {
-  left: 95%;
-  animation: blow 5000ms infinite;
-  animation-delay: 8395ms;
-}
-.bottom-particles .bubble:nth-child(19) {
-  left: 52%;
-  animation: blow 5000ms infinite;
-  animation-delay: 3008ms;
-}
-.bottom-particles .bubble:nth-child(20) {
-  left: 68%;
-  animation: blow 12589ms infinite;
-  animation-delay: 8339ms;
-}
-.bottom-particles .bubble:nth-child(21) {
-  left: 55%;
-  animation: blow 5000ms infinite;
-  animation-delay: 9871ms;
-}
-.bottom-particles .bubble:nth-child(22) {
-  left: 86%;
-  animation: blow 5000ms infinite;
-  animation-delay: 1425ms;
-}
-.bottom-particles .bubble:nth-child(23) {
-  left: 98%;
-  animation: blow 8661ms infinite;
-  animation-delay: 11345ms;
-}
-.bottom-particles .bubble:nth-child(24) {
-  left: 8%;
-  animation: blow 9462ms infinite;
-  animation-delay: 8794ms;
-}
-.bottom-particles .bubble:nth-child(25) {
-  left: 36%;
-  animation: blow 14199ms infinite;
-  animation-delay: 6630ms;
-}
-.bottom-particles .bubble:nth-child(26) {
-  left: 38%;
-  animation: blow 8553ms infinite;
-  animation-delay: 11547ms;
-}
-.bottom-particles .bubble:nth-child(27) {
-  left: 11%;
-  animation: blow 10995ms infinite;
-  animation-delay: 2839ms;
-}
-.bottom-particles .bubble:nth-child(28) {
-  left: 32%;
-  animation: blow 5000ms infinite;
-  animation-delay: 37ms;
-}
-.bottom-particles .bubble:nth-child(29) {
-  left: 28%;
-  animation: blow 9168ms infinite;
-  animation-delay: 4237ms;
-}
-.bottom-particles .bubble:nth-child(30) {
-  left: 36%;
-  animation: blow 11668ms infinite;
-  animation-delay: 794ms;
-}
-.bottom-particles .bubble:nth-child(31) {
-  left: 27%;
-  animation: blow 6446ms infinite;
-  animation-delay: 9068ms;
-}
-.bottom-particles .bubble:nth-child(32) {
-  left: 7%;
-  animation: blow 12930ms infinite;
-  animation-delay: 8736ms;
-}
-.bottom-particles .bubble:nth-child(33) {
-  left: 99%;
-  animation: blow 11951ms infinite;
-  animation-delay: 6057ms;
-}
-.bottom-particles .bubble:nth-child(34) {
-  left: 92%;
-  animation: blow 9768ms infinite;
-  animation-delay: 7321ms;
-}
-.bottom-particles .bubble:nth-child(35) {
-  left: 60%;
-  animation: blow 12993ms infinite;
-  animation-delay: 2931ms;
-}
-.bottom-particles .bubble:nth-child(36) {
-  left: 64%;
-  animation: blow 6788ms infinite;
-  animation-delay: 5958ms;
-}
-.bottom-particles .bubble:nth-child(37) {
-  left: 14%;
-  animation: blow 5000ms infinite;
-  animation-delay: 9958ms;
-}
-.bottom-particles .bubble:nth-child(38) {
-  left: 44%;
-  animation: blow 14100ms infinite;
-  animation-delay: 5914ms;
-}
-.bottom-particles .bubble:nth-child(39) {
-  left: 2%;
-  animation: blow 5000ms infinite;
-  animation-delay: 5097ms;
-}
-.bottom-particles .bubble:nth-child(40) {
-  left: 66%;
-  animation: blow 7088ms infinite;
-  animation-delay: 8210ms;
-}
-.bottom-particles .bubble:nth-child(41) {
-  left: 95%;
-  animation: blow 5000ms infinite;
-  animation-delay: 5703ms;
-}
-.bottom-particles .bubble:nth-child(42) {
-  left: 56%;
-  animation: blow 8932ms infinite;
-  animation-delay: 4205ms;
-}
-.bottom-particles .bubble:nth-child(43) {
-  left: 15%;
-  animation: blow 5000ms infinite;
-  animation-delay: 11343ms;
-}
-.bottom-particles .bubble:nth-child(44) {
-  left: 44%;
-  animation: blow 12483ms infinite;
-  animation-delay: 3001ms;
-}
-.bottom-particles .bubble:nth-child(45) {
-  left: 87%;
-  animation: blow 6219ms infinite;
-  animation-delay: 2971ms;
-}
-.bottom-particles .bubble:nth-child(46) {
-  left: 71%;
-  animation: blow 9256ms infinite;
-  animation-delay: 6229ms;
-}
-.bottom-particles .bubble:nth-child(47) {
-  left: 46%;
-  animation: blow 12082ms infinite;
-  animation-delay: 7982ms;
-}
-.bottom-particles .bubble:nth-child(48) {
-  left: 83%;
-  animation: blow 12699ms infinite;
-  animation-delay: 1205ms;
-}
-.bottom-particles .bubble:nth-child(49) {
-  left: 74%;
-  animation: blow 5000ms infinite;
-  animation-delay: 7115ms;
-}
-.bottom-particles .bubble:nth-child(50) {
-  left: 67%;
-  animation: blow 11877ms infinite;
-  animation-delay: 1065ms;
-}
-
-@keyframes blow {
-  0% {
-    opacity: 0;
-    transform: translate(0, 0);
-  }
-  20% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-    transform: translate(0, -100vh) scale(0.2);
-  }
-}
-
 button .emoji-wrap {
-  position: relative;
-  display: flex;
+    position: relative;
+    display: flex;
 }
 
 button .emoji-active {
-  position: absolute;
-  right: -60%;
-  top: 40%;
-  font-size: 10px;
+    position: absolute;
+    right: -60%;
+    top: 40%;
+    font-size: 10px;
 }
 
 button .emoji-valid {
-  font-size: 18px;
+    font-size: 18px;
 }
+
 button:not(:active) .emoji-active {
-  visibility: hidden;
+    visibility: hidden;
 }
 
 form:valid button:not(:active) .emoji-wrap {
-  box-shadow: 0 4px 2px -2px gray;
-  animation: emoji-wrap-animation 1s infinite;
+    box-shadow: 0 4px 2px -2px gray;
+    animation: emoji-wrap-animation 1s infinite;
 }
+
 form:valid button:not(:active) .emoji-valid {
-  animation: emoji-animation 1s infinite;
+    animation: emoji-animation 1s infinite;
 }
 
 form:not(:valid) button {
-  cursor: not-allowed;
+    cursor: not-allowed;
 }
 
 @keyframes emoji-animation {
@@ -324,315 +45,88 @@ form:not(:valid) button {
 
 @keyframes emoji-wrap-animation {
     0% {
-      box-shadow: 0 4px 2px -2px gray;
+        box-shadow: 0 4px 2px -2px gray;
     }
     50% {
-      box-shadow: 0 4px 2px -3px gray;
+        box-shadow: 0 4px 2px -3px gray;
     }
     100% {
-      box-shadow: 0 4px 2px -2px gray;
+        box-shadow: 0 4px 2px -2px gray;
     }
 }
 
-
-
 @font-face {
-  font-family: CherryBombOne-Regular;
-  src: url(CherryBombOne-Regular.ttf);
+    font-family: CherryBombOne-Regular;
+    src: url(CherryBombOne-Regular.ttf);
 }
 
 button:not(:disabled) {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 button {
-  align-items: center;
-  appearance: none;
-  background-color: #FCFCFD;
-  border-radius: 4px;
-  border-width: 0;
-  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
-  box-sizing: border-box;
-  color: #36395A;
-  display: inline-flex;
-  font-family: "JetBrains Mono",monospace;
-  justify-content: center;
-  line-height: 1;
-  list-style: none;
-  overflow: hidden;
-  position: relative;
-  text-align: left;
-  text-decoration: none;
-  transition: box-shadow .15s,transform .15s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-  will-change: box-shadow,transform;
+    align-items: center;
+    appearance: none;
+    background-color: #FCFCFD;
+    border-width: 0;
+    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+    box-sizing: border-box;
+    color: #36395A;
+    display: inline-flex;
+    font-family: "JetBrains Mono", monospace;
+    justify-content: center;
+    line-height: 1;
+    list-style: none;
+    overflow: hidden;
+    position: relative;
+    text-align: left;
+    text-decoration: none;
+    transition: box-shadow .15s, transform .15s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    will-change: box-shadow, transform;
 }
 
 button:focus {
-  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
 }
 
 button:hover {
-  border-color: red;
-  box-shadow: var(--box-shadow) 0 4px 8px, var(--box-shadow) 0 7px 13px -3px, var(--box-shadow-inset) 0 -3px 0 inset;
-  transform: translateY(-2px);
+    border-color: red;
+    box-shadow: var(--box-shadow) 0 4px 8px, var(--box-shadow) 0 7px 13px -3px, var(--box-shadow-inset) 0 -3px 0 inset;
+    transform: translateY(-2px);
 }
 
 button:active {
-  box-shadow: #D6D6E7 0 3px 7px inset;
-  transform: translateY(2px);
+    box-shadow: #D6D6E7 0 3px 7px inset;
+    transform: translateY(2px);
 }
 
 body {
-  font-family: Arial, sans-serif;
-  width: 420px;
-  margin: 0;
-  /*border: 1px solid gray;*/
-  /*box-shadow: 0px 0px 3px 1px #ddd;*/
-}
-
-header {
-  position: relative;
-
-  margin: 0;
-  padding: 10px 12px;
-
-  display: grid;
-  align-items: center;
-  grid-template-columns: auto 1fr;
-  grid-column-gap: 10px;
-
-  background: rgb(249,255,0);
-  background: linear-gradient(0deg, rgba(249,255,0,1) 25%, rgba(0,224,255,1) 82%);
-  box-shadow: 0 0 4px 1px #00000061;
-  /*border-bottom: 1px solid #ddd;*/
-  color: white;
-
-  font-family: CherryBombOne-Regular;
-}
-
-.logo {
-  background-color: white;
-  color: #4caf50;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  width: 45px;
-  height: 100%;
-}
-
-h1 {
-  font-weight: 400;
-  letter-spacing: 0.1em;
-  font-size: 19px;
-  text-shadow: -1px 0 rgba(0, 0, 0, 0.4), 0 1px rgba(0, 0, 0, 0.4), 1px 0 rgba(0, 0, 0, 0.4), 0 -1px rgba(0, 0, 0, 0.4);
-  margin: 0 0 -4px;
-}
-
-.made-in-ukraine-with-love {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  font-size: 10px;
-  color: #fff;
-  opacity: 0.7;
-  margin-right: 10px;
-  text-shadow: -1px 0 rgba(0, 0, 0, 0.4), 0 1px rgba(0, 0, 0, 0.4), 1px 0 rgba(0, 0, 0, 0.4), 0 -1px rgba(0, 0, 0, 0.4);
+    font-family: Arial, sans-serif;
+    width: 420px;
+    margin: 0;
+    /*border: 1px solid gray;*/
+    /*box-shadow: 0px 0px 3px 1px #ddd;*/
 }
 
 .description {
-  margin: 6px;
-  padding: 6px 14px;
-  border-radius: 6px;
+    z-index: 1;
+    margin: 6px;
+    padding: 6px 14px;
+    border-radius: 6px;
 
-  font-size: 13px;
+    font-size: 13px;
 
-  background-color: lightgoldenrodyellow;
+    background-color: lightgoldenrodyellow;
 }
 
 main {
-  height: 100%;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-  grid-row-gap: 2px;
-}
-
-.list-header {
-  display: grid;
-  grid-template-columns: 25px 1fr 1fr auto;
-  padding: 6px 25px 6px 16px;
-  border-bottom: 1px solid #eeeeee;
-}
-
-#todo-list {
-  height: 360px;
-  overflow-y: auto;
-  box-sizing: border-box;
-
-  padding: 0 5px 0 10px;
-  margin: 0;
-
-  scrollbar-color: #d4aa70 #e4e4e4;
-  scrollbar-width: thin;
-}
-
-#todo-list::-webkit-scrollbar {
-  width: 16px;
-}
-
-#todo-list::-webkit-scrollbar-track {
-  background-color: #e4e4e4;
-  border-radius: 100px;
-}
-
-#todo-list::-webkit-scrollbar-thumb {
-  border-radius: 100px;
-  border: 4px solid transparent;
-
-  background-clip: content-box;
-  background-color: #9e9e9e73;
-}
-
-.todo-item {
-  padding: 4px 10px 4px 2px;
-  margin-left: 20px;
-  border-radius: 18px;
-}
-
-.todo-item-field-wrap .field {
-  box-sizing: border-box;
-  padding: 6px 0 6px 12px;
-}
-
-.todo-item-field-wrap:first-of-type .field {
-  border-top-left-radius: 15px;
-  border-bottom-left-radius: 15px;
-}
-
-.todo-item.odd {
-  background-color: #eee;
-}
-
-.todo-item::marker {
-  color: #838383;
-}
-
-.todo-item-inner {
-  display: grid;
-  align-items: center;
-  grid-template-columns: 1fr 1fr auto;
-  grid-column-gap: 5px;
-}
-
-.todo-item-field-wrap {
-  position: relative;
-  height: 100%;
-  cursor: text;
-}
-
-.original {
-  font-weight: bold;
-}
-.translation {
-  color: #666;
-}
-.field {
-  border: 1px solid transparent;
-  font-size: 15px;
-  display: inline-flex;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  transition: border 0.1s;
-}
-.field.hidden {
-  visibility: hidden;
-}
-
-.field:hover {
-  box-sizing: border-box;
-  border-color: #868686;
-
-  background-color: #eee;
-}
-
-.todo-item.odd .field:hover {
-  background-color: white;
-}
-
-.todo-item-input {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-}
-
-.todo-item-input.hidden {
-  visibility: hidden;
-}
-
-.delete-btn {
-  --box-shadow: rgba(45, 35, 66, 0.3);
-  --box-shadow-inset: #00000036;
-  background-color: red;
-  border: none;
-  box-shadow: 0px 0px 4px 1px #00000036;
-  border-radius: 50%;
-  width: 30px;
-  height: 30px;
-}
-
-.delete-btn img {
-  width: 20px;
-  height: 20px;
-  filter: invert(1);
-}
-
-#add-todo-form {
-  padding: 16px 10px;
-  border: 1px solid #ddd;
-  border-bottom: none;
-  margin-block-end: 0;
-
-  display: grid;
-  align-items: flex-end;
-  grid-template-columns: 1fr 1fr auto;
-  grid-column-gap: 10px;
-
-  background-color: #efefef;
-}
-
-.button {
-  --box-shadow: #306e32;
-  --box-shadow-inset: #8ab38f;
-  padding: 12px;
-  border-radius: 12px;
-  border: none;
-
-  font-weight: bold;
-
-  background-color: #4caf50;
-  color: white;
-  box-shadow: 0px 0px 4px 1px #00000036;
-}
-
-.form-label {
-  display: grid;
-  grid-row-gap: 3px;
-  min-width: 0;
-}
-
-.form-label span {
-  font-size: 14px;
-  color: #676767;
-}
-
-.form-input {
-  font-size: 23px;
-  min-width: 0;
+    height: 100%;
+    display: grid;
+    grid-template-rows: auto 1fr;
+    background-color: yellow;
+    grid-row-gap: 5px;
 }
