--- a/popup/css/popup.css
+++ b/popup/css/popup.css
@@ -1,132 +1,61 @@
-button .emoji-wrap {
-    position: relative;
-    display: flex;
-}
-
-button .emoji-active {
-    position: absolute;
-    right: -60%;
-    top: 40%;
-    font-size: 10px;
-}
-
-button .emoji-valid {
-    font-size: 18px;
-}
-
-button:not(:active) .emoji-active {
-    visibility: hidden;
-}
-
-form:valid button:not(:active) .emoji-wrap {
-    box-shadow: 0 4px 2px -2px gray;
-    animation: emoji-wrap-animation 1s infinite;
-}
-
-form:valid button:not(:active) .emoji-valid {
-    animation: emoji-animation 1s infinite;
-}
-
-form:not(:valid) button {
-    cursor: not-allowed;
-}
-
-@keyframes emoji-animation {
-    0% {
-        transform: translateY(0);
-    }
-    50% {
-        transform: translateY(-6px);
-    }
-    100% {
-        transform: translateY(0);
-    }
-}
-
-@keyframes emoji-wrap-animation {
-    0% {
-        box-shadow: 0 4px 2px -2px gray;
-    }
-    50% {
-        box-shadow: 0 4px 2px -3px gray;
-    }
-    100% {
-        box-shadow: 0 4px 2px -2px gray;
-    }
-}
-
 @font-face {
     font-family: CherryBombOne-Regular;
     src: url(../fonts/CherryBombOne-Regular.ttf);
 }
 
-button:not(:disabled) {
-    cursor: pointer;
-}
-
-button {
-    align-items: center;
-    appearance: none;
-    background-color: #FCFCFD;
-    border-width: 0;
-    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-    box-sizing: border-box;
-    color: #36395A;
-    display: inline-flex;
-    font-family: "JetBrains Mono", monospace;
-    justify-content: center;
-    line-height: 1;
-    list-style: none;
-    overflow: hidden;
-    position: relative;
-    text-align: left;
-    text-decoration: none;
-    transition: box-shadow .15s, transform .15s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    white-space: nowrap;
-    will-change: box-shadow, transform;
-}
-
-button:focus {
-    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-}
-
-button:hover {
-    border-color: red;
-    box-shadow: var(--box-shadow) 0 4px 8px, var(--box-shadow) 0 7px 13px -3px, var(--box-shadow-inset) 0 -3px 0 inset;
-    transform: translateY(-2px);
-}
-
-button:active {
-    box-shadow: #D6D6E7 0 3px 7px inset;
-    transform: translateY(2px);
-}
-
 body {
-    font-family: Arial, sans-serif;
+    display: grid;
+    grid-template-rows: auto 1fr;
+    grid-row-gap: 5px;
     width: 420px;
+    height: 600px;
     margin: 0;
-    /*border: 1px solid gray;*/
-    /*box-shadow: 0px 0px 3px 1px #ddd;*/
+
+    background: linear-gradient(0deg, rgb(75, 173, 10) -137%, rgb(247, 255, 0) 81%, rgba(0, 224, 255, 1) 85%);
 }
 
-.description {
+body.disabled {
+    background: linear-gradient(0deg, rgb(27, 37, 54) 25%, rgb(255, 58, 58) 82%);
+}
+
+
+body > *:not(.background) {
+    z-index: 2;
+}
+
+body .background {
     z-index: 1;
-    margin: 6px;
-    padding: 6px 14px;
-    border-radius: 6px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.8;
+    filter: blur(2px);
 
-    font-size: 13px;
+    background-image: url("../images/bg/grass.png");
+    background-position: bottom;
+    background-size: 94% 20%;
+    background-repeat: no-repeat;
 
-    background-color: lightgoldenrodyellow;
+    pointer-events: none;
+    animation: grass 3s ease-in-out infinite;
+}
+
+
+@keyframes grass {
+    0% {
+        background-position: 0 100%;
+    }
+    50% {
+        background-position: 12% 103%;
+    }
+    100% {
+        background-position: 0 100%;
+    }
 }
 
 main {
-    height: 100%;
-    display: grid;
-    grid-template-rows: auto 1fr;
-    background-color: yellow;
-    grid-row-gap: 5px;
+    display: flex;
+    flex-direction: column;
 }
