--- a/popup/web-components/views/dictionary/dictionary.css
+++ b/popup/web-components/views/dictionary/dictionary.css
@@ -2,9 +2,10 @@
     z-index: 1;
     margin: 0 10px;
     box-sizing: border-box;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255, 0.65);
     border-radius: 4px;
-    box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.5);
+    border: 1px solid rgba(184, 134, 11, 0.56);
+    /*box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.5);*/
 }
 
 .list-header {
@@ -30,11 +31,16 @@
 
 #todo-list::-webkit-scrollbar {
     width: 16px;
+    cursor: pointer;
 }
 
 #todo-list::-webkit-scrollbar-track {
-    background-color: #e4e4e4;
+    background-color: rgba(228, 228, 228, 0.69);
     border-radius: 100px;
+}
+
+#todo-list::-webkit-scrollbar-track:hover {
+    background-color: rgba(228, 228, 228);
 }
 
 #todo-list::-webkit-scrollbar-thumb {
@@ -42,7 +48,11 @@
     border: 4px solid transparent;
 
     background-clip: content-box;
-    background-color: #9e9e9e73;
+    background-color: rgba(158, 158, 158, 0.35);
+}
+
+#todo-list::-webkit-scrollbar-thumb:hover {
+    background-color: #9e9e9e;
 }
 
 .todo-item {
