--- a/src/shared-resources/components/button/button.css
+++ b/src/shared-resources/components/button/button.css
@@ -126,7 +126,7 @@ button[is="pll-button"][data-color="cancel"] {
 }
 
 button[is="pll-button"][data-color="add"] {
-    background-color: #4caf50;
+    background-color: #6ac96e;
 }
 
 button[is="pll-button"][data-color="back"] {
